# 2026-A071

./: .gitignore  README.md  almatorch.Dockerfile  docker-compose-template.yml  docker-compose.yml  main.py  params.yml  prometheus.yml  pyproject.toml  template.Dockerfile
Ministral-3/14B/: Ministral-3-14B.Dockerfile  Ministral-3-14B.py  docker-compose.yml
Ministral-3/8b/: docker-compose.yml  ministral-3-8b.Dockerfile  prometheus.yml
Mistral/7b/: mistral-7b.py
gpt-oss/20b/: docker-compose.yml  gpt-oss-20b.Dockerfile  gpt-oss-20b.py  prometheus.yml
qwen-3/8b/: docker-compose.yml  finetune_peft_bf16.py  finetune_peft_int8.py  finetune_peft_qlora.py  power_telemetry.py  prometheus.yml  qwen-3-8b.Dockerfile  requirements-qwen3-8b.txt  train_common.py
